# mcp-python-refactoring

./: .coveragerc  .gitignore  Dockerfile  LICENSE  README.md  main.py  mcp_server.py  mcp_server_config.json  mcp_wrapper.py  package.json  pyproject.toml  pytest.ini  refactoring_schema.dbml  run_mcp_server.py  server.json  simple_mcp_server.py  test-mcp.js  test_complex_file.py  test_mcp_client.py  test_tool.py
.github/workflows/: publish.yml  refactorops.yml
docs/: REFRACTOROPS_PLAN.md
examples/: example_code.py
src/mcp_refactoring_assistant/: __init__.py  __main__.py  cli.py  mcp_server.py  server.py  tui.py
src/mcp_refactoring_assistant/analyzers/: __init__.py  ast_analyzer.py  base.py  complexipy_analyzer.py  dependency_security_analyzer.py  mccabe_analyzer.py  modern_patterns_analyzer.py  pyrefly_analyzer.py  radon_analyzer.py  rope_analyzer.py  security_analyzer.py  security_and_patterns_analyzer.py  structure_analyzer.py  type_selection_analyzer.py  vulture_analyzer.py
src/mcp_refactoring_assistant/analyzers/package/: __init__.py  cohesion_analyzer.py  coupling_analyzer.py  dependency_analyzer.py  package_structure_analyzer.py
src/mcp_refactoring_assistant/core/: __init__.py  analyzer.py  package_analyzer.py
src/mcp_refactoring_assistant/models/: __init__.py  data_classes.py  package_models.py
src/mcp_refactoring_assistant/refactorops/: __init__.py  cli.py  dedup.py  exec.py  mcp_server.py  schema.py  scope.py
src/mcp_refactoring_assistant/refactorops/adapters/: __init__.py  complexity.py  dead_code.py  jscpd.py  ruff.py
src/mcp_refactoring_assistant/refactorops/tools/: __init__.py  analyze_repo_quality.py
tests/: conftest.py  security_test_report.json  security_test_results.xml  test_analyzer.py  test_data_classes.py  test_dependency_security_analyzer.py  test_mcp_security_integration.py  test_modern_patterns_analyzer.py  test_security_analyzer.py  test_security_and_patterns_analyzer.py  test_security_performance_and_edge_cases.py
tests/fixtures/sample_code/: class_example.py  complex_function.py  problematic_code.py  simple_functions.py
tests/fixtures/security_test_code/: clean_modern_code.py  invalid_syntax.py  modernization_opportunities.py  requirements_vulnerable.txt  security_vulnerabilities.py
tests/functional/: test_mcp_integration.py  test_refactoring_flow.py
tests/unit/: test_core_analyzer.py
tests/unit/refactorops/: test_analyze_repo_quality.py  test_cli_gate.py  test_complexity_adapter.py  test_dead_code_adapter.py  test_dedup.py  test_exec.py  test_jscpd_adapter.py  test_mcp_server.py  test_ruff_adapter.py  test_schema.py  test_scope.py
