[project]
name = "mcp-refactoring-assistant"
version = "0.1.0"
description = "MCP tool to guide Python code refactoring without automatic changes"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rope>=1.11.0",
    "radon>=6.0.1",
    "vulture>=2.10",
    "jedi>=0.19.1",
    "libcst>=1.1.0",
    "mccabe>=0.7.0",
    "mcp>=1.13.1",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_refactoring_assistant"]
