[project]
name = "mcp-python-refactoring"
version = "0.1.0"
description = "MCP tool to guide Python code refactoring without automatic changes"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "slamer59", email = "your.email@example.com"}
]
license = {text = "MIT"}
keywords = ["refactoring", "mcp", "python", "code-analysis", "ai-assistant"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "rope>=1.11.0",
    "radon>=6.0.1",
    "vulture>=2.10",
    "jedi>=0.19.1",
    "libcst>=1.1.0",
    "mccabe>=0.7.0",
    "mcp>=1.13.1",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pyrefly>=0.30.0",
    "complexipy>=4.0.2",
    "pytest>=8.4.1",
    "duckdb>=1.3.2",
    "pydantic>=2.11.7",
    # CLI dependencies
    "click>=8.0.0",
    "rich>=13.0.0",
    "coverage>=7.0.0",
    "psutil>=5.9.0",
    "pytest-xdist>=3.8.0",
]

[project.urls]
Homepage = "https://github.com/slamer59/mcp-python-refactoring"
Repository = "https://github.com/slamer59/mcp-python-refactoring"
Issues = "https://github.com/slamer59/mcp-python-refactoring/issues"

[project.scripts]
# Commandes principales
python-refactor-cli = "mcp_refactoring_assistant.cli:cli"
python-refactor = "mcp_refactoring_assistant.__main__:main"
# Alias pour compatibilité
mcp-python-refactoring = "mcp_refactoring_assistant.__main__:main"

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]
cli = [
    "click>=8.0.0",
    "rich>=13.0.0",
]
analysis = [
    "coverage>=7.0.0",
    "duckdb>=1.3.2",
]
all = [
    "mcp-python-refactoring[mcp,cli,analysis]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_refactoring_assistant"]

[tool.hatch.build.targets.sdist]
include = ["src/mcp_refactoring_assistant"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
